--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 					<h2>The biggest startup event of the year</h2>
 
 									<!-- Begin Mailchimp Signup Form -->
-				<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+				<!-- <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css"> -->
 				<style type="text/css">
 					#mc_embed_signup{/*background:#fff*/; clear:left; font:14px Helvetica,Arial,sans-serif; }
 					/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
